Removal of Customer properties and endpoints; General adjustments to run the API locally

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,2 @@
-API_PORT="3334"
-DATABASE_URL="postgresql://postgres:docker@postgres-user:5432/tech-challenge-user?schema=public"
-REDIS_URL="redis://redis:6379"
+API_PORT="3339"
+DATABASE_URL="postgresql://postgres:docker@postgres-hackaton-frame-zipper:5432/hackaton-frame-zipper?schema=public"
