Added prisma migrations; Update node and postgresql versions

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,2 @@
 API_PORT="3339"
-DATABASE_URL="postgresql://postgres:docker@postgres-hackaton-frame-zipper:5432/hackaton-frame-zipper?schema=public"
+DATABASE_URL="postgresql://postgres:docker@localhost:5440/hackaton-frame-zipper?schema=public"
