--- a/package.json
+++ b/package.json
@@ -27,20 +27,27 @@
 	"dependencies": {
 		"@fastify/cors": "^9.0.1",
 		"@fastify/helmet": "^11.1.1",
+		"@fastify/multipart": "^7.7.3",
 		"@fastify/swagger": "^8.14.0",
 		"@fastify/swagger-ui": "^4.0.0",
-		"@prisma/client": "^5.17.0",
+		"@prisma/client": "^6.4.1",
+		"@types/uuid": "^10.0.0",
 		"axios": "^1.7.7",
 		"dotenv": "^16.4.5",
-		"fastify": "^4.28.1",
+		"fastify": "^4.29.0",
 		"fastify-type-provider-zod": "^2.0.0",
+		"ffmpeg-static": "^5.2.0",
+		"fluent-ffmpeg": "^2.1.3",
 		"http-status-codes": "^2.3.0",
+		"jszip": "^3.10.1",
 		"pino": "^9.3.2",
 		"tsconfig-paths": "^4.2.0",
+		"uuid": "^11.1.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@cucumber/cucumber": "^11.2.0",
+		"@types/fluent-ffmpeg": "^2.1.27",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.13.5",
 		"@types/pino": "^7.0.5",
