Feat: Creation of endpoint and feature to import videos and export a .zip file with the video's images (locally) (#4)
- Endpoint que recebe um arquivo de vídeo e exporta as imagens em um .zip (Feito apenas localmente para adaptarmos depois)
- Remoção de classes não utilizadas
- Atualização de dependências no package.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,9 @@ services:
       API_PORT: 3339
     networks:
       - hackaton-frame-zipper-network
+    volumes:
+      - './src/storage/files:/app/dist/storage/files'
+      - './src/storage/uploads:/app/dist/storage/uploads'
 
 networks:
   hackaton-frame-zipper-network:
