--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 services:
-  postgres-hackaton-frame-zipper:
-    container_name: hackaton-frame-zipper-postgres
+  postgres-hackaton-api:
+    container_name: hackaton-api-postgres
     image: postgres:alpine
     ports:
       - '5440:5432'
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: docker
-      POSTGRES_DB: hackaton-frame-zipper
+      POSTGRES_DB: hackaton-api
       PGDATA: '/var/lib/postgresql/data'
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
-      - hackaton-frame-zipper-network
+      - hackaton-api-network
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
@@ -20,7 +20,7 @@ services:
       retries: 5
 
   app:
-    container_name: hackaton-frame-zipper-api
+    container_name: hackaton-api
     build:
       context: .
       dockerfile: Dockerfile
@@ -29,19 +29,16 @@ services:
       - '5555:5555'
     env_file: .env
     depends_on:
-      postgres-hackaton-frame-zipper:
+      postgres-hackaton-api:
         condition: service_healthy
     environment:
-      DATABASE_URL: 'postgresql://postgres:docker@postgres-hackaton-frame-zipper:5432/hackaton-frame-zipper?schema=public'
+      DATABASE_URL: 'postgresql://postgres:docker@postgres-hackaton-api:5432/hackaton-api?schema=public'
       API_PORT: 3339
     networks:
-      - hackaton-frame-zipper-network
-    volumes:
-      - './src/storage/files:/app/dist/storage/files'
-      - './src/storage/uploads:/app/dist/storage/uploads'
+      - hackaton-api-network
 
 networks:
-  hackaton-frame-zipper-network:
+  hackaton-api-network:
     driver: bridge
 
 volumes:
