--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"schema": "./prisma/schema.prisma"
 	},
 	"dependencies": {
+		"@aws-sdk/client-lambda": "^3.782.0",
 		"@fastify/cors": "^9.0.1",
 		"@fastify/helmet": "^11.1.1",
 		"@fastify/multipart": "^7.7.3",
@@ -37,6 +38,7 @@
 		"fastify": "^4.29.0",
 		"fastify-type-provider-zod": "^2.0.0",
 		"http-status-codes": "^2.3.0",
+		"node-cache": "^5.1.2",
 		"pino": "^9.3.2",
 		"tsconfig-paths": "^4.2.0",
 		"uuid": "^11.1.0",
