--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@aws-sdk/client-lambda": "^3.782.0",
 		"@aws-sdk/client-s3": "^3.782.0",
 		"@aws-sdk/client-sqs": "^3.782.0",
+		"@aws-sdk/client-sns": "^3.782.0",
 		"@fastify/cors": "^9.0.1",
 		"@fastify/helmet": "^11.1.1",
 		"@fastify/multipart": "^7.7.3",
