--- a/.github/workflows/ci-dockerhub-api.yaml
+++ b/.github/workflows/ci-dockerhub-api.yaml
@@ -5,7 +5,14 @@ on:
     paths:
       - 'src/**'
     branches: ['develop']
-
+  workflow_dispatch:
+    inputs:
+      deployType:
+        description: 'Deploy type'
+        type: choice
+        options:
+          - deploy
+        required: true
 jobs:
   docker-api:
     name: 'Build and Push for API'
