feat: update and download file

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 API_PORT="3333"
-DATABASE_URL="postgresql://postgres:docker@localhost:5440/hackaton-frame-zipper?schema=public"
+DATABASE_URL="postgres://postgres:Senha!123456@dev-hackaton-postgres.clurqvszast5.us-east-1.rds.amazonaws.com:5432/hackaton?schema=public"
 AWS_REGION="us-east-1"
-AWS_BUCKET=""
-AWS_AUTH_LAMBDA=""
+AWS_BUCKET="dev-hackaton-g4-bucket"
+AWS_SQS_URL=""
+AWS_API_URL=""
+USER_POOL_ID=""
+AWS_AUTH_LAMBDA="cognito-get-user-lambda"
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_SESSION_TOKEN=""
