--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
 		"schema": "./prisma/schema.prisma"
 	},
 	"dependencies": {
+		"@aws-sdk/client-cognito-identity-provider": "^3.782.0",
 		"@aws-sdk/client-lambda": "^3.782.0",
 		"@aws-sdk/client-s3": "^3.782.0",
-		"@aws-sdk/client-sqs": "^3.782.0",
 		"@aws-sdk/client-sns": "^3.782.0",
+		"@aws-sdk/client-sqs": "^3.782.0",
+		"@aws-sdk/middleware-sdk-sqs": "^3.775.0",
+		"@aws-sdk/s3-request-presigner": "^3.782.0",
 		"@fastify/cors": "^9.0.1",
 		"@fastify/helmet": "^11.1.1",
 		"@fastify/multipart": "^7.7.3",
