--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-cognito-identity-provider": "^3.782.0",
-		"@aws-sdk/client-lambda": "^3.782.0",
 		"@aws-sdk/client-s3": "^3.782.0",
 		"@aws-sdk/client-sns": "^3.782.0",
 		"@aws-sdk/client-sqs": "^3.782.0",
@@ -44,6 +43,7 @@
 		"fastify": "^4.29.0",
 		"fastify-type-provider-zod": "^2.0.0",
 		"http-status-codes": "^2.3.0",
+		"jwt-decode": "^4.0.0",
 		"node-cache": "^5.1.2",
 		"pino": "^9.3.2",
 		"tsconfig-paths": "^4.2.0",
