--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Get hackaton-api RDS Endpoint
         run: |
-          DB_IDENTIFIER="${{ vars.TF_VAR_pg_main_database }}"
+          DB_IDENTIFIER="${{ vars.PG_MAIN_DATABASE }}"
           # Verificar se o comando retorna resultados
           if ! DB_INFO=$(aws rds describe-db-instances --db-instance-identifier ${DB_IDENTIFIER} 2>/dev/null); then
             echo "Erro ao buscar informações do banco de dados: ${DB_IDENTIFIER}"
