fix: name database identifier

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -29,10 +29,10 @@ jobs:
 
       - name: Get hackaton-api RDS Endpoint
         run: |
-          DB_IDENTIFIER="${{ vars.PG_MAIN_DATABASE }}"
-          DB_ENDPOINT=$(aws rds describe-db-instances --db-instance-identifier dev-${DB_IDENTIFIER} --query 'DBInstances[0].Endpoint.Address' --output text)
-          DB_PORT=$(aws rds describe-db-instances --db-instance-identifier dev-${DB_IDENTIFIER} --query 'DBInstances[0].Endpoint.Port' --output text)
-          DB_USERNAME=$(aws rds describe-db-instances --db-instance-identifier dev-${DB_IDENTIFIER} --query 'DBInstances[0].MasterUsername' --output text)
+          DB_IDENTIFIER="dev-${{ vars.PG_MAIN_DATABASE }}-postgres"
+          DB_ENDPOINT=$(aws rds describe-db-instances --db-instance-identifier ${DB_IDENTIFIER} --query 'DBInstances[0].Endpoint.Address' --output text)
+          DB_PORT=$(aws rds describe-db-instances --db-instance-identifier ${DB_IDENTIFIER} --query 'DBInstances[0].Endpoint.Port' --output text)
+          DB_USERNAME=$(aws rds describe-db-instances --db-instance-identifier ${DB_IDENTIFIER} --query 'DBInstances[0].MasterUsername' --output text)
           DB_PASSWORD=${{ secrets.TF_VAR_pg_main_password }}
           echo "DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_ENDPOINT}:${DB_PORT}/${DB_IDENTIFIER}?schema=public" >> $GITHUB_ENV
       - name: Setup Node.js
