--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import-helpers": "^1.3.1",
+		"form-data": "^4.0.2",
 		"jest": "^29.7.0",
 		"jest-sonar-reporter": "^2.0.0",
 		"pino-pretty": "^11.2.2",
